--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -1207,10 +1207,21 @@ a, img {
     }
 
     .close {
+        background-image: url("../extensions/default/bramble/images/close-icon-dark.svg");
+        background-position: center;
+        background-repeat: no-repeat;
         position: absolute;
+        width: 10px;
+        height: 10px;
         left: 15px;
-        top: 10px;
+        top: 13px;
         margin-right: 30px;
+    }
+
+    .dark & {
+      .close {
+        background-image: url("../extensions/default/bramble/images/close-icon-light.svg");
+      }
     }
 
 }
