moved close button icons to src/stles/images and updated url path for background-image of close button

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -1207,7 +1207,7 @@ a, img {
     }
 
     .close {
-        background-image: url("../extensions/default/bramble/images/close-icon-dark.svg");
+        background-image: url("images/close-icon-dark.svg");
         background-position: center;
         background-repeat: no-repeat;
         position: absolute;
@@ -1220,7 +1220,7 @@ a, img {
 
     .dark & {
       .close {
-        background-image: url("../extensions/default/bramble/images/close-icon-light.svg");
+        background-image: url("images/close-icon-light.svg");
       }
     }
 
