--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -1210,12 +1210,12 @@ a, img {
         background-image: url("images/close-icon-dark.svg");
         background-position: center;
         background-repeat: no-repeat;
+        background-size: 13px;
         position: absolute;
-        width: 10px;
-        height: 10px;
-        left: 15px;
-        top: 13px;
-        margin-right: 30px;
+        width: 25px;
+        height: 25px;
+        right: 10px;
+        top: 8px;
     }
 
     .dark & {
