added the slider value indicator

--- a/src/extensions/default/InlineBorderRadiusEditor/css/main.less
+++ b/src/extensions/default/InlineBorderRadiusEditor/css/main.less
@@ -41,6 +41,11 @@
         min-width: 150px;
         cursor: default;
     }
+    
+}
+.slider-indicator {
+    width: 30px;
+    padding-left: 8px;
 }
 .border-radius-editor section .individualCornerArea{
     background-color:#ce3030;
