added radio buttons to toggle slider unit

--- a/src/extensions/default/InlineBorderRadiusEditor/css/main.less
+++ b/src/extensions/default/InlineBorderRadiusEditor/css/main.less
@@ -28,6 +28,7 @@
     display: inline-block;
     position: relative;
     vertical-align: top;
+    width: 528px;
 }
 .border-radius-editor section .border-radius-input {
     display: block;
@@ -118,7 +119,14 @@
 .border-radius-editor .button-bar li {
     display: inline-block;
     margin-left: -4px;
+    min-width: 20px;
+    text-align: center;
 }
+
+.border-radius-editor .ul-padding-left {
+    float: right;
+}
+
 .border-radius-editor .button-bar a {
     text-decoration: none;
     color: #454545;
