Add font family "Courier New" to fix rendering issues

--- a/src/extensions/default/bramble/stylesheets/consoleTheme.less
+++ b/src/extensions/default/bramble/stylesheets/consoleTheme.less
@@ -19,7 +19,7 @@
     box-shadow: none;
     display: block;
     font-size: 15px;
-    font-family: 'Menlo Regular', Consolas, Inconsolata, 'Vera Sans', 'Lucida Console', Courier, monospace, fixed;
+    font-family: 'Menlo Regular', Consolas, Inconsolata, 'Vera Sans', 'Lucida Console', 'Courier New', Courier, monospace, fixed;
     user-select: text;
     color: black;
     transform-origin: 15% 50%;
@@ -28,7 +28,7 @@
 
 #editor-console .console .helper {
     font-size: 15px;
-    font-family: 'Menlo Regular', Consolas, Inconsolata, 'Vera Sans', 'Lucida Console', Courier, monospace, fixed;
+    font-family: 'Menlo Regular', Consolas, Inconsolata, 'Vera Sans', 'Lucida Console', 'Courier New', Courier, monospace, fixed;
     display: none;
     color: black;
     position: absolute;
