--- a/src/extensions/extra/JavaScriptCodeHints-Browser/styles/brackets-js-hints.css
+++ b/src/extensions/extra/JavaScriptCodeHints-Browser/styles/brackets-js-hints.css
@@ -263,15 +263,15 @@ span.brackets-js-hints-with-type-details {
 
 .brackets-js-hints.literal-hint {
     color: #444; /* dark grey */
-    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", Courier, monospace, fixed;
+    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", "Courier New", Courier, monospace, fixed;
 }
 
 .brackets-js-hints.keyword-hint {
-    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", Courier, monospace, fixed;
+    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", "Courier New", Courier, monospace, fixed;
 }
 
 .brackets-js-hints.keyword-hint .matched-hint {
-    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", Courier, monospace, fixed;
+    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", "Courier New", Courier, monospace, fixed;
     font-weight: 500; 
 }
 
@@ -327,7 +327,7 @@ span.brackets-js-hints-with-type-details {
 
 .dark .brackets-js-hints.literal-hint {
     color: #bbb; /* dark grey */
-    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", Courier, fixed;
+    font-family: "Menlo Regular", Consolas, Inconsolata, "Vera Sans", "Lucida Console", "Courier New", Courier, monospace, fixed;
 }
 
 .dark #function-hint-container {
