--- a/src/extensions/extra/PDFView/styles/viewer-overrides.css
+++ b/src/extensions/extra/PDFView/styles/viewer-overrides.css
@@ -26,7 +26,6 @@ body {
     color: rgba(0,0,0,.7);
 }
 
-
 #pdf-page-count {
     position: relative;
     padding-right: 16px;
@@ -45,6 +44,10 @@ body {
     height: 100%;
     opacity: .6;
     background-repeat: no-repeat;
+}
+
+#PDFBug .stats {
+font-family: "Courier New", Courier, monospace !important;
 }
 
 .dark-theme #pdf-page-count:after {
