--- a/src/extensions/default/InlineBorderRadiusEditor/css/main.less
+++ b/src/extensions/default/InlineBorderRadiusEditor/css/main.less
@@ -1,53 +1,45 @@
 @sansFontFamily: "Open Sans" , Helvetica, Arial, sans-serif;
 // Dark UI theme
 
-@dark-bc-bg-highlight: #2a3b50;
-@dark-bc-highlight: rgba(255, 255, 255, 0.06);
-@dark-bc-text: #ccc;
-@dark-bc-text-alt: #fff;
-@dark-bc-highlight-hard: rgba(255, 255, 255, 0.2);
-@dark-bc-btn-bg: #3f3f3f;
-@dark-bc-btn-border: #202020;
-@dark-bc-btn-border-focused: #2893ef;
-@dark-bc-btn-border-focused-glow: transparent;
-@dark-bc-shadow: rgba(0, 0, 0, 0.24);
-@dark-bc-shadow-small: rgba(0, 0, 0, 0.06);
-@dark-bc-shadow-medium: rgba(0, 0, 0, 0.12);
-@dark-bc-input-bg: #555;
-
 .border-radius-editor {
-    padding: 16px;
+    padding: 18px 16px 0 16px;
     font-family: @sansFontFamily;
-    min-height: 240px;
+    min-height: 220px;
+
+    &:focus {
+      outline: none;
+    }
 
     header {
-        margin-bottom: 20px;
-        padding-bottom: 15px;
-        border-bottom: solid 2px rgba(255,255,255,.1);
+        margin-bottom: 5px;
+        padding-bottom: 10px;
+        font-size: 14px;
 
         label {
             display: inline-block;
             padding-right: 5px;
-            font-weight: 700;
             cursor: default;
+        }
+    }
+
+    input {
+        margin: 0;
+        vertical-align: middle;
+        box-shadow: none;
+        width: 100%;
+
+        &:focus {
+          outline: none;
         }
     }
 }
 
-
-
-.border-radius-editor:focus {
-    outline: none;
-}
-
-
 .border-radius-editor table {
-
     table-layout: fixed;
 
     tr:hover {
         td {
-            background: rgba(255,255,255,.08);
+            background: rgba(0,0,0,.07);
         }
 
         .corner-icon:after {
@@ -67,7 +59,7 @@
         vertical-align: middle;
         margin: 0;
         font-size: 13px;
-        // white-space: nowrap;
+        white-space: nowrap;
 
         &:first-child {
             border-radius: 24px 0 0 24px;
@@ -78,38 +70,41 @@
         }
     }
 
-    td.slider-value {
-        min-width: 45px;
-    }
-
     td.slider-container {
-        // min-width: 150px;
+        width: 99%;
+        padding: 10px 5px
     }
 
+    td.slider-value {
+        width: 50px;
+    }
 
     td .button-bar {
         position: relative;
         top: -1px;
+
+        li.selected a {
+          background-color: rgba(0,0,0,.4);
+        }
     }
 
-    td.label-container {
-        width: 30px;
+    .label-container {
+        width: 80px;
         position: relative;
     }
 
     .corner-icon {
         width: 16px;
         height: 11px;
-        border: solid 2px rgba(255,255,255,.2);
-        position: absolute;
-        left: 20px;
-        top: 17px;
-        overflow: visible;
+        border: solid 2px rgba(0,0,0,.2);
+        display: block;
+        margin: 0 5px 0 10px;
+        position: relative;
 
-        &:after {
+        &:not(.all):after {
             content: "";
             position: absolute;
-            background: white;
+            background: black;
             width: 4px;
             height: 4px;
             border-radius: 50%;
@@ -134,13 +129,37 @@
             bottom: -3px;
             right: -3px;
         }
+
+        &.all .dot {
+          position: absolute;
+          background: black;
+          width: 4px;
+          height: 4px;
+          border-radius: 50%;
+
+          &:nth-child(1) {
+            top: -3px;
+            left: -3px;
+          }
+          &:nth-child(2) {
+            top: -3px;
+            right: -3px;
+          }
+          &:nth-child(3) {
+            bottom: -3px;
+            left: -3px;
+          }
+          &:nth-child(4) {
+            bottom: -3px;
+            right: -3px;
+          }
+
+        }
     }
 
-
     .units-container {
-
-        // width: 120px;
         padding-left: 0;
+        width: 120px;
 
         .button-bar {
             li {
@@ -156,6 +175,31 @@
         margin: 0;
         cursor: default;
     }
+}
+
+// Dark theme for the corner Icons
+.dark .border-radius-editor .corner-icon {
+    border: solid 2px rgba(255,255,255,.2);
+
+    &:not(.all):after {
+        background: white;
+    }
+
+    &.all .dot {
+      background: white;
+    }
+}
+
+.dark .border-radius-editor table {
+  td .button-bar li.selected a {
+      background-color: #404040;
+  }
+
+  tr:hover {
+      td {
+          background: rgba(255,255,255,.08);
+      }
+  }
 
 }
 
@@ -172,57 +216,25 @@
 
 
 
-.border-radius-editor input {
-    margin: 0;
-    vertical-align: middle;
-    box-shadow: none;
-    width: 100%;
-}
-
-.border-radius-editor input:focus {
-    // background: #fff;
-    outline: none;
-    // box-shadow: 0 0 0 1px #94ceff;
-    // border: 1px solid #2893ef;
-    z-index: 911;
-}
-
-// Dark UI theme
-
-@dark-bc-bg-highlight: #2a3b50;
-@dark-bc-highlight: rgba(255, 255, 255, 0.06);
-@dark-bc-text: #ccc;
-@dark-bc-text-alt: #fff;
-@dark-bc-highlight-hard: rgba(255, 255, 255, 0.2);
-@dark-bc-btn-bg: #3f3f3f;
-@dark-bc-btn-border: #202020;
-@dark-bc-btn-border-focused: #2893ef;
-@dark-bc-btn-border-focused-glow: transparent;
-@dark-bc-shadow: rgba(0, 0, 0, 0.24);
-@dark-bc-shadow-small: rgba(0, 0, 0, 0.06);
-@dark-bc-shadow-medium: rgba(0, 0, 0, 0.12);
-@dark-bc-input-bg: #555;
-
 .border-radius-editor ul.button-bar {
     display: inline-block;
     padding: 0;
     margin: 0;
 
-
     li {
         display: inline-block;
         text-align: center;
-        margin-right: 5px;
     }
 
     a {
         text-decoration: none;
-        color: rgba(255,255,255,.4);
+        color: rgba(0,0,0,.4);
         cursor: default;
         display: block;
         padding: 5px 12px 6px 12px;
         border-radius: 14px;
         transition: all .1s ease-out;
+
 
         &:hover {
             cursor: pointer;
@@ -231,12 +243,25 @@
 
     li:not(.selected) a {
         &:hover {
+            color: rgba(0,0,0,.8);
+            background: rgba(0,0,0,.1);
+        }
+    }
+}
+
+.dark .border-radius-editor ul.button-bar {
+    a {
+        color: rgba(255,255,255,.4);
+    }
+
+    li:not(.selected) a {
+        &:hover {
             color: rgba(255,255,255,.8);
             background: rgba(0,0,0,.4);
         }
     }
-
 }
+
 
 
 
@@ -253,29 +278,10 @@
     color: white;
 }
 
-.dark {
-    .border-radius-editor footer .box-shadow-value {
-        //border-box-shadow: @dark-bc-btn-border;
-        // box-shadow: @dark-bc-text;
-    }
+// Styles for custom Slider
 
-    .border-radius-editor footer input {
-        // border: 1px solid @dark-bc-btn-border;
-        // box-shadow: inset 0 1px 0 @dark-bc-shadow-small;
-        // background: @dark-bc-input-bg;
-        // box-shadow: @dark-bc-text;
-    }
-
-    .border-radius-editor footer input:focus {
-        // background: @dark-bc-input-bg;
-        // box-shadow: 0 0 0 1px @dark-bc-btn-border-focused-glow;
-        // border: 1px solid @dark-bc-btn-border-focused;
-    }
-}
-
-
-
-@track-color: #444;
+@track-color-dark: #444;
+@track-color: rgba(0,0,0,.2);
 @thumb-color: white;
 
 @thumb-radius: 12px;
@@ -307,7 +313,6 @@
 }
 
 .thumb() {
-  // border: @thumb-border-width solid @thumb-border-color;
   height: @thumb-height;
   width: @thumb-width;
   border-radius: @thumb-radius;
@@ -315,7 +320,7 @@
   cursor: pointer;
 }
 
-input[type=range] {
+.border-radius-editor input[type=range] {
   -webkit-appearance: none;
   margin: @thumb-height/2 0;
   width: @track-width;
@@ -329,7 +334,6 @@ input[type=range] {
     .track();
     background: @track-color;
     border-radius: @track-radius;
-    // border: @track-border-width solid @track-border-color;
   }
 
   &::-webkit-slider-thumb {
@@ -378,5 +382,31 @@ input[type=range] {
   }
   &:focus::-ms-fill-upper {
     background: lighten(@track-color, @contrast);
+  }
+}
+
+.dark .border-radius-editor input[type=range] {
+
+  &::-webkit-slider-runnable-track {
+    background: @track-color-dark;
+  }
+
+
+  &::-moz-range-track {
+    background: @track-color-dark;
+  }
+
+
+  &::-ms-fill-lower {
+    background: darken(@track-color-dark, @contrast);
+  }
+  &::-ms-fill-upper {
+    background: @track-color-dark;
+  }
+  &:focus::-ms-fill-lower {
+    background: @track-color-dark;
+  }
+  &:focus::-ms-fill-upper {
+    background: lighten(@track-color-dark, @contrast);
   }
 }
