--- a/src/extensions/default/InlinePaddingEditor/css/main.less
+++ b/src/extensions/default/InlinePaddingEditor/css/main.less
@@ -34,12 +34,9 @@
     }
 }
 
-
-
 .padding-editor:focus {
     outline: none;
 }
-
 
 .padding-editor table {
 
@@ -81,11 +78,6 @@
     td.slider-value {
         min-width: 45px;
     }
-
-    td.slider-container {
-        // min-width: 150px;
-    }
-
 
     td .button-bar {
         position: relative;
@@ -139,10 +131,7 @@
         }
     }
 
-
-    .units-container {
-
-        // width: 120px;
+   .units-container {
         padding-left: 0;
 
         .button-bar {
@@ -154,7 +143,6 @@
             }
         }
     }
-
     td label {
         margin: 0;
         cursor: default;
@@ -173,8 +161,6 @@
 }
 
 
-
-
 .padding-editor input {
     margin: 0;
     vertical-align: middle;
@@ -183,10 +169,7 @@
 }
 
 .padding-editor input:focus {
-    // background: #fff;
     outline: none;
-    // box-shadow: 0 0 0 1px #94ceff;
-    // border: 1px solid #2893ef;
     z-index: 911;
 }
 
@@ -256,28 +239,6 @@
     color: white;
 }
 
-.dark {
-    .border-radius-editor footer .box-shadow-value {
-        //border-box-shadow: @dark-bc-btn-border;
-        // box-shadow: @dark-bc-text;
-    }
-
-    .padding-editor footer input {
-        // border: 1px solid @dark-bc-btn-border;
-        // box-shadow: inset 0 1px 0 @dark-bc-shadow-small;
-        // background: @dark-bc-input-bg;
-        // box-shadow: @dark-bc-text;
-    }
-
-    .padding-editor footer input:focus {
-        // background: @dark-bc-input-bg;
-        // box-shadow: 0 0 0 1px @dark-bc-btn-border-focused-glow;
-        // border: 1px solid @dark-bc-btn-border-focused;
-    }
-}
-
-
-
 @track-color: #444;
 @thumb-color: white;
 
@@ -310,7 +271,6 @@
 }
 
 .thumb() {
-  // border: @thumb-border-width solid @thumb-border-color;
   height: @thumb-height;
   width: @thumb-width;
   border-radius: @thumb-radius;
@@ -320,6 +280,8 @@
 
 input[type=range] {
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   margin: @thumb-height/2 0;
   width: @track-width;
   background-color: transparent;
@@ -332,7 +294,6 @@ input[type=range] {
     .track();
     background: @track-color;
     border-radius: @track-radius;
-    // border: @track-border-width solid @track-border-color;
   }
 
   &::-webkit-slider-thumb {
@@ -383,3 +344,4 @@ input[type=range] {
     background: lighten(@track-color, @contrast);
   }
 }
+
