User provided order of values is preserved while changing value in the box-shadow editor
InlineBoxShadowEditor uses a `orderOfValues` to preseve the user provided order of values while building the boxShadowString when changes are made in widget.
Note: Changes to BoxShadowEditorTemplate.html - renaming `slider-container` to `color-container` for color input
Changes to style.less - translation of toggle by amount of its width

--- a/src/extensions/default/InlineBoxShadowEditor/css/style.less
+++ b/src/extensions/default/InlineBoxShadowEditor/css/style.less
@@ -378,9 +378,9 @@
   }
 
   input:checked + .toggle-switch-slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(@thumb-width);
+    -ms-transform: translateX(@thumb-width);
+    transform: translateX(@thumb-width);
   }
 }
 
